fix: PDF is not pixeled on firefox

--- a/src/index.css
+++ b/src/index.css
@@ -231,7 +231,7 @@ button {
   /*background-color: #f5f5f5;*/
   width: 210mm;
   height: 297mm;
-  margin-left: auto;
+  /*margin-left: auto;*/
   margin-right: auto;
   /*box-shadow: 0 5px 10px 0 rgba(255, 255, 255, 0.1);
   box-sizing: border-box;*/
